# conways-game-of-life

./: .gitignore  Cargo.toml  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: m1w0k4iswsqf8pvdridngf5v6lhrlj3r-source
.direnv/flake-inputs/3ggrxz52vvvr7jnsp5fwjdk87zx3v4vy-source/: Cargo.toml  flake.nix
.trunk/actions/trunk-cache-prune/: 2023-10-04-18-17-59.410.yaml  2023-10-07-19-12-56.2.yaml  2023-10-10-15-34-14.798.yaml  2023-10-10-15-34-14.821.yaml  2023-10-14-19-41-47.304.yaml  2023-10-14-19-41-47.311.yaml  2023-10-22-15-25-36.553.yaml  2023-10-22-15-25-36.839.yaml  2023-10-25-12-56-25.672.yaml  2023-10-25-12-56-26.238.yaml
.trunk/actions/trunk-share-with-everyone/: 2023-10-04-18-17-59.291.yaml  2023-10-07-19-12-55.961.yaml  2023-10-07-19-12-56.2.yaml  2023-10-10-15-34-14.748.yaml  2023-10-10-15-34-14.819.yaml  2023-10-14-19-41-47.292.yaml  2023-10-14-19-41-47.309.yaml  2023-10-22-15-25-36.466.yaml  2023-10-22-15-25-36.474.yaml  2023-10-25-12-56-26.225.yaml  2023-10-25-12-56-26.265.yaml
.trunk/actions/trunk-single-player-auto-on-upgrade/: 2023-10-04-18-18-01.533.yaml  2023-10-07-19-12-56.2.yaml  2023-10-10-15-34-14.788.yaml  2023-10-10-15-34-14.803.yaml  2023-10-14-19-41-47.292.yaml  2023-10-14-19-41-47.307.yaml  2023-10-22-15-25-36.466.yaml  (+3 more)
.trunk/notifications/: trunk-share-with-everyone.yaml
.trunk/tools/: pip  pip3  pydoc3  python  python3-config  trufflehog
src/: board.txt  conv.rs  main.rs  sumcounts.rs  vectorized.rs
(+25 files in other folders)
